# 5dchess_engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  actions.cpp  actions.h  bind.cpp  bitboard.cpp  board.cpp  board.h  board_2d.cpp  board_2d.h  board_5d.cpp  board_5d.h  cli.cpp  display_static.py  engine.cpp  game.cpp  game.h  host.py  main.py  multiverse.cpp  multiverse.h  pyproject.toml  setup.py  state.cpp  state.h  test.cpp  test.py  utils.h  vec4.h
.github/workflows/: build.yml
docs/: compare.html  index.md  pgn-bnf.txt
src/core/: action.cpp  action.h  actions.cpp  actions.h  ast.cpp  ast.h  bitboard.cpp  bitboard.h  bitboard.inl  board.cpp  board.h  game.cpp  game.h  gametree.h  hypercuboid.cpp  hypercuboid.h  magic.cpp  magic.h  multiverse.cpp  multiverse.h  multiverse_base.cpp  multiverse_base.h  multiverse_variants.cpp  multiverse_variants.h  pgnparser.cpp  pgnparser.h  piece.h  state.cpp  state.h  state.inl  turn.h
src/misc/: debug.h  generator.h  geometry.cpp  geometry.h  graph.cpp  graph.h  utils.h  vec4.h
test/: CMakeLists.txt  just_unicorns.cpp  parse_game.cpp  parse_move.cpp  parsepgn.cpp  run_games.cpp  test_bitboards.cpp  test_generator.cpp  test_hc.cpp  test_hcutils.cpp  two_timelines.cpp  very_small.cpp
test/pgn/: README.txt  another.5dpgn  softmate.5dpgn  verysmall.5dpgn
